[package]
name = "keymaster"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jay3332/KeyMaster"

[dependencies.tokio]
version = "1.14"
features = ["full"]

[dependencies.axum]
version = "0.4.3"
features = ["headers"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "macros", "offline", "runtime-tokio-rustls", "time"]