[package]
name = "keymaster"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jay3332/KeyMaster"

[dependencies]
dotenv = "0.15.0"
http = "0.2"
serde = "1.0"

[dependencies.axum]
version = "0.4.3"
features = ["headers"]

[dependencies.simd-json]
version = "0.4"
features = ["128bit"]

[dependencies.sqlx]
version = "0.5.9"
features = ["postgres", "macros", "offline", "runtime-tokio-rustls", "time"]

[dependencies.tokio]
version = "1.14"
features = ["full"]