[package]
name = "keymaster"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jay3332/KeyMaster"

[dependencies]
argon2-async = "0.1.1"
async-trait = "0.1"
base64 = "0.13.0"
bitflags = "1.3.2"
dotenv = "0.15.0"
http = "0.2"
rand = "0.8.4"
ring = "0.16"
serde = "1.0"

[dependencies.axum]
version = "0.4.3"
features = ["headers"]

[dependencies.rand_core]
version = "0.6"
features = ["std"]

[dependencies.simd-json]
version = "0.4"
features = ["128bit"]

[dependencies.sqlx]
version = "0.5.9"
features = ["postgres", "macros", "offline", "runtime-tokio-rustls", "time"]

[dependencies.tokio]
version = "1.14"
features = ["full"]